[project]
name = "flash-app"
version = "1.0.0"
description = "Hamza Flashlight App"
dependencies = [
    "flet==0.85.3",
    "flet-flashlight==0.85.3",
    "flet-permission-handler==0.85.3",
]

[tool.flet]
assets = "assets"

[tool.flet.app]
path = "."

[tool.flet.android]
package_name = "com.hamza.flash"
app_title = "Hamza Flash 2026"
